# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/distributedhardware/device_manager/device_manager.gni")
module_out_path = "device_manager/component_loader_test"

group("unittest") {
  testonly = true

  deps = [
    ":UTTest_auth_message_processor",
    ":UTTest_auth_request_state",
    ":UTTest_auth_response_state",
    ":UTTest_device_manager_impl",
    ":UTTest_device_manager_notify",
    ":UTTest_device_manager_service",
    ":UTTest_device_manager_service_impl",
    ":UTTest_device_manager_service_listener",
    ":UTTest_discovery_filter",
    ":UTTest_discovery_manager",
    ":UTTest_dm_adapter_manager",
    ":UTTest_dm_anonymous",
    ":UTTest_dm_auth_manager_first",
    ":UTTest_dm_auth_manager_second",
    ":UTTest_dm_common_event_manager",
    ":UTTest_dm_credential_manager",
    ":UTTest_dm_device_state_manager",
    ":UTTest_dm_deviceprofile_connector",
    ":UTTest_dm_dfx",
    ":UTTest_dm_discovery_filter",
    ":UTTest_dm_discovery_manager",
    ":UTTest_dm_distributed_hardware_load",
    ":UTTest_dm_import_auth_code",
    ":UTTest_dm_pin_holder",
    ":UTTest_dm_publish_manager",
    ":UTTest_dm_radar_helper_test",
    ":UTTest_dm_timer",
    ":UTTest_hichain_auth_connector",
    ":UTTest_hichain_connector",
    ":UTTest_ipc_client_manager",
    ":UTTest_ipc_client_proxy",
    ":UTTest_ipc_client_server_proxy",
    ":UTTest_ipc_client_stub",
    ":UTTest_ipc_cmd_parser_client",
    ":UTTest_ipc_cmd_parser_service",
    ":UTTest_ipc_cmd_register",
    ":UTTest_ipc_get_device_info_rsp",
    ":UTTest_ipc_server_client_proxy",
    ":UTTest_ipc_server_listener",
    ":UTTest_ipc_server_stub",
    ":UTTest_mine_softbus_listener",
    ":UTTest_multiple_user_connector",
    ":UTTest_permission_manager",
    ":UTTest_pin_auth",
    ":UTTest_pin_auth_ui",
    ":UTTest_softbus_adapter",
    ":UTTest_softbus_connector",
    ":UTTest_softbus_listener",
    ":UTTest_softbus_session",
  ]
}

## UnitTest UTTest_pin_auth {{{
ohos_unittest("UTTest_pin_auth") {
  module_out_path = module_out_path

  include_dirs = [
    "${ext_path}/pin_auth/include/standard",
    "${devicemanager_path}/test/commonunittest",
  ]

  sources = [ "${devicemanager_path}/test/commonunittest/UTTest_pin_auth.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
  ]
}

## UnitTest UTTest_pin_auth }}}

## UnitTest UTTest_pin_auth_ui {{{
ohos_unittest("UTTest_pin_auth_ui") {
  module_out_path = module_out_path

  include_dirs = [
    "${ext_path}/pin_auth/include/standard",
    "${devicemanager_path}/test/commonunittest",
  ]

  sources =
      [ "${devicemanager_path}/test/commonunittest/UTTest_pin_auth_ui.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
  ]
}

## UnitTest UTTest_pin_auth_ui }}}

## UnitTest UTTest_ipc_cmd_parser_client {{{
ohos_unittest("UTTest_ipc_cmd_parser_client") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/commondependency/include" ]

  sources = [
    "${innerkits_path}/native_cpp/src/ipc/standard/ipc_cmd_parser.cpp",
    "UTTest_ipc_cmd_parser_client.cpp",
  ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]
}

## UnitTest UTTest_ipc_cmd_parser_client }}}

## UnitTest UTTest_ipc_cmd_parser_service {{{
ohos_unittest("UTTest_ipc_cmd_parser_service") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/commondependency/include" ]

  sources = [
    "${services_path}/src/ipc/standard/ipc_cmd_parser.cpp",
    "UTTest_ipc_cmd_parser_service.cpp",
  ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]
}

## UnitTest UTTest_ipc_cmd_parser_service }}}

## UnitTest UTTest_ipc_cmd_register {{{
ohos_unittest("UTTest_ipc_cmd_register") {
  module_out_path = module_out_path

  sources = [ "UTTest_ipc_cmd_register.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [ "device_auth:deviceauth_sdk" ]
}

## UnitTest UTTest_ipc_cmd_register }}}

## UnitTest UTTest_dm_pin_holder {{{
ohos_unittest("UTTest_dm_pin_holder") {
  module_out_path = module_out_path

  sources = [
    "${services_path}/src/pinholder/pin_holder.cpp",
    "${services_path}/src/pinholder/pin_holder_session.cpp",
    "UTTest_dm_pin_holder.cpp",
  ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [ "device_auth:deviceauth_sdk" ]
}

## UnitTest UTTest_dm_pin_holder }}}

## UnitTest UTTest_ipc_get_device_info_rsp {{{
ohos_unittest("UTTest_ipc_get_device_info_rsp") {
  module_out_path = module_out_path

  sources = [ "UTTest_ipc_get_device_info_rsp.cpp" ]

  deps = [ ":device_manager_test_common" ]
}

## UnitTest UTTest_ipc_get_device_info_rsp }}}

## UnitTest UTTest_dm_common_event_manager {{{
ohos_unittest("UTTest_dm_common_event_manager") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/test/commonunittest" ]

  sources = [ "${devicemanager_path}/test/commonunittest/UTTest_dm_common_event_manager.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [ "device_auth:deviceauth_sdk" ]
}

## UnitTest UTTest_dm_common_event_manager }}}

## UnitTest device_manager_impl_test {{{
ohos_unittest("device_manager_impl_test") {
  module_out_path = module_out_path

  sources = [ "device_manager_impl_test.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [ "device_auth:deviceauth_sdk" ]
}

## UnitTest device_manager_impl_test }}}

## UnitTest UTTest_dm_credential_manager {{{
ohos_unittest("UTTest_dm_credential_manager") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/test/commonunittest" ]

  sources = [ "${devicemanager_path}/test/commonunittest/UTTest_dm_credential_manager.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [ "device_auth:deviceauth_sdk" ]
}

## UnitTest UTTest_dm_credential_manager }}}

## UnitTest UTTest_device_manager_service {{{
ohos_unittest("UTTest_device_manager_service") {
  module_out_path = module_out_path

  sources = [ "UTTest_device_manager_service.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
  ]
}

## UnitTest UTTest_device_manager_service }}}

## UnitTest UTTest_hichain_auth_connector {{{
ohos_unittest("UTTest_hichain_auth_connector") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/test/commonunittest" ]

  sources = [ "${devicemanager_path}/test/commonunittest/UTTest_hichain_auth_connector.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
  ]
}

## UnitTest UTTest_hichain_auth_connector }}}

## UnitTest UTTest_hichain_connector {{{
ohos_unittest("UTTest_hichain_connector") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/test/commonunittest" ]

  sources = [
    "${devicemanager_path}/test/commonunittest/UTTest_hichain_connector.cpp",
  ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
  ]
}

## UnitTest UTTest_hichain_connector }}}

## UnitTest UTTest_mine_softbus_listener {{{
ohos_unittest("UTTest_mine_softbus_listener") {
  module_out_path = module_out_path

  include_dirs = [
    "${devicemanager_path}/test/softbusunittest",
    "${services_path}/include",
    "//third_party/openssl:libcrypto_shared",
  ]

  sources = [ "${devicemanager_path}/test/softbusunittest/UTTest_mine_softbus_listener.cpp" ]

  deps = [
    ":device_manager_test_common",
    "${services_path}:devicemanagerservice",
    "${utils_path}:devicemanagerutils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "openssl:libcrypto_shared",
  ]
}

## UnitTest UTTest_mine_softbus_listener }}}

## UnitTest UTTest_softbus_adapter {{{
ohos_unittest("UTTest_softbus_adapter") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/test/softbusunittest" ]

  sources = [
    "${devicemanager_path}/test/softbusunittest/UTTest_softbus_adapter.cpp",
  ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
  ]
}

## UnitTest UTTest_softbus_adapter }}}

## UnitTest UTTest_softbus_connector {{{
ohos_unittest("UTTest_softbus_connector") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/test/softbusunittest" ]

  sources = [
    "${devicemanager_path}/test/softbusunittest/UTTest_softbus_connector.cpp",
  ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "os_account:libaccountkits",
  ]
}

## UnitTest UTTest_softbus_connector }}}

## UnitTest UTTest_softbus_listener {{{
ohos_unittest("UTTest_softbus_listener") {
  module_out_path = module_out_path

  include_dirs = [
    "${devicemanager_path}/test/softbusunittest",
    "${services_path}/src/softbus",
  ]

  sources = [
    "${devicemanager_path}/test/softbusunittest/UTTest_softbus_listener.cpp",
    "${devicemanager_path}/test/unittest/mock/parameter.cpp",
  ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
  ]
}

## UnitTest UTTest_softbus_listener }}}

## UnitTest UTTest_softbus_session {{{
ohos_unittest("UTTest_softbus_session") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/test/softbusunittest" ]

  sources = [
    "${devicemanager_path}/test/softbusunittest/UTTest_softbus_session.cpp",
  ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
  ]
}

## UnitTest UTTest_softbus_session }}}

## UnitTest UTTest_dm_adapter_manager {{{
ohos_unittest("UTTest_dm_adapter_manager") {
  module_out_path = module_out_path

  sources = [ "UTTest_dm_adapter_manager.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [ "device_auth:deviceauth_sdk" ]
}

## UnitTest UTTest_dm_adapter_manager }}}

## UnitTest UTTest_dm_anonymous {{{
ohos_unittest("UTTest_dm_anonymous") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/test/commonunittest" ]

  sources = [
    "${common_path}/src/dm_anonymous.cpp",
    "${common_path}/src/dm_error_message.cpp",
    "${devicemanager_path}/test/commonunittest/UTTest_dm_anonymous.cpp",
  ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [ "device_auth:deviceauth_sdk" ]
}

## UnitTest UTTest_dm_anonymous }}}

## UnitTest UTTest_dm_timer {{{
ohos_unittest("UTTest_dm_timer") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/test/commonunittest" ]

  sources = [ "${devicemanager_path}/test/commonunittest/UTTest_dm_timer.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [ "device_auth:deviceauth_sdk" ]
}

## UnitTest UTTest_dm_timer }}}

## UnitTest UTTest_ipc_client_manager {{{
ohos_unittest("UTTest_ipc_client_manager") {
  module_out_path = module_out_path

  sources = [ "UTTest_ipc_client_manager.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [ "device_auth:deviceauth_sdk" ]
}

## UnitTest UTTest_ipc_client_manager }}}

## UnitTest UTTest_ipc_client_proxy {{{
ohos_unittest("UTTest_ipc_client_proxy") {
  module_out_path = module_out_path

  sources = [ "UTTest_ipc_client_proxy.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [ "device_auth:deviceauth_sdk" ]
}

## UnitTest UTTest_ipc_client_proxy }}}

## UnitTest UTTest_ipc_client_stub {{{
ohos_unittest("UTTest_ipc_client_stub") {
  module_out_path = module_out_path

  sources = [ "UTTest_ipc_client_stub.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [ "device_auth:deviceauth_sdk" ]
}

## UnitTest UTTest_ipc_client_stub }}}

## UnitTest UTTest_ipc_server_client_proxy {{{
ohos_unittest("UTTest_ipc_server_client_proxy") {
  module_out_path = module_out_path

  sources = [
    "${services_path}/src/ipc/standard/ipc_cmd_parser.cpp",
    "UTTest_ipc_server_client_proxy.cpp",
  ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
  ]
}

## UnitTest UTTest_ipc_server_client_proxy }}}

## UnitTest UTTest_ipc_server_listener {{{
ohos_unittest("UTTest_ipc_server_listener") {
  module_out_path = module_out_path

  sources = [ "UTTest_ipc_server_listener.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [ "device_auth:deviceauth_sdk" ]
}

## UnitTest UTTest_ipc_server_listener }}}

## UnitTest UTTest_ipc_server_stub {{{
ohos_unittest("UTTest_ipc_server_stub") {
  module_out_path = module_out_path

  sources = [ "UTTest_ipc_server_stub.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
  ]
}

## UnitTest UTTest_ipc_server_stub }}}

## UnitTest UTTest_device_manager_impl {{{
ohos_unittest("UTTest_device_manager_impl") {
  module_out_path = module_out_path

  sources = [
    "UTTest_device_manager_impl.cpp",
    "UTTest_device_manager_impl_three.cpp",
    "UTTest_device_manager_impl_two.cpp",
  ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [ "device_auth:deviceauth_sdk" ]
}

## UnitTest UTTest_device_manager_impl }}}

## UnitTest UTTest_dm_import_auth_code {{{
ohos_unittest("UTTest_dm_import_auth_code") {
  module_out_path = module_out_path

  sources = [ "UTTest_dm_import_auth_code.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [ "device_auth:deviceauth_sdk" ]
}

## UnitTest UTTest_dm_import_auth_code }}}

## UnitTest UTTest_multiple_user_connector {{{
ohos_unittest("UTTest_multiple_user_connector") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/test/commonunittest" ]

  sources = [
    "${devicemanager_path}/commondependency/src/multiple_user_connector.cpp",
    "${devicemanager_path}/test/commonunittest/UTTest_multiple_user_connector.cpp",
  ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "os_account:libaccountkits",
    "os_account:os_account_innerkits",
  ]
}

## UnitTest UTTest_multiple_user_connector }}}

## UnitTest UTTest_permission_manager {{{
ohos_unittest("UTTest_permission_manager") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/test/commonunittest" ]

  sources = [
    "${devicemanager_path}/test/commonunittest/UTTest_permission_manager.cpp",
  ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [ "device_auth:deviceauth_sdk" ]
}

## UnitTest UTTest_permission_manager }}}

## UnitTest UTTest_device_manager_notify {{{
ohos_unittest("UTTest_device_manager_notify") {
  module_out_path = module_out_path

  sources = [
    "UTTest_device_manager_notify.cpp",
    "UTTest_device_manager_notify_three.cpp",
    "UTTest_device_manager_notify_two.cpp",
  ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [ "device_auth:deviceauth_sdk" ]
}

## UnitTest UTTest_device_manager_notify }}}

## UnitTest UTTest_ipc_client_server_proxy {{{
ohos_unittest("UTTest_ipc_client_server_proxy") {
  module_out_path = module_out_path

  sources = [ "UTTest_ipc_client_server_proxy.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [ "device_auth:deviceauth_sdk" ]
}

## UnitTest UTTest_ipc_client_server_proxy }}}

## UnitTest UTTest_dm_device_state_manager {{{
ohos_unittest("UTTest_dm_device_state_manager") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/test/commonunittest" ]

  sources = [ "${devicemanager_path}/test/commonunittest/UTTest_dm_device_state_manager.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
  ]
}

## UnitTest UTTest_dm_device_state_manager }}}

## UnitTest UTTest_dm_dfx {{{
ohos_unittest("UTTest_dm_dfx") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/test/commonunittest" ]

  sources = [ "${devicemanager_path}/test/commonunittest/UTTest_dm_dfx.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "hitrace:hitrace_meter",
  ]
}

## UnitTest UTTest_dm_dfx }}}

## UnitTest UTTest_dm_discovery_filter {{{
ohos_unittest("UTTest_dm_discovery_filter") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/test/commonunittest" ]

  sources = [
    "${devicemanager_path}/test/commonunittest/UTTest_dm_discovery_filter.cpp",
  ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
  ]
}

## UnitTest UTTest_dm_discovery_filter }}}

## UnitTest UTTest_device_manager_service_impl {{{
ohos_unittest("UTTest_device_manager_service_impl") {
  module_out_path = module_out_path

  include_dirs = [
    "${os_account_path }/interfaces/innerkits/ohosaccount/native/include",
    "${os_account_path }/interfaces/innerkits/osaccount/native/include",
  ]

  sources = [
    "${devicemanager_path}/commondependency/src/multiple_user_connector.cpp",
    "${servicesimpl_path}/src/device_manager_service_impl.cpp",
    "UTTest_device_manager_service_impl.cpp",
  ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
    "os_account:libaccountkits",
    "os_account:os_account_innerkits",
  ]
}

## UnitTest UTTest_device_manager_service_impl }}}

## UnitTest UTTest_device_manager_service_listener {{{
ohos_unittest("UTTest_device_manager_service_listener") {
  module_out_path = module_out_path

  sources = [
    "${devicemanager_path}/test/unittest/mock/ipc_server_listener.cpp",
    "${services_path}/src/device_manager_service_listener.cpp",
    "UTTest_device_manager_service_listener.cpp",
  ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
  ]
}

## UnitTest UTTest_device_manager_service_listener }}}

## UnitTest UTTest_auth_message_processor {{{
ohos_unittest("UTTest_auth_message_processor") {
  module_out_path = module_out_path

  sources = [ "UTTest_auth_message_processor.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
  ]
}

## UTTest_auth_message_processor }}}

## UnitTest UTTest_auth_response_state {{{
ohos_unittest("UTTest_auth_response_state") {
  module_out_path = module_out_path

  sources = [ "UTTest_auth_response_state.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
  ]
}

## UTTest_auth_response_state }}}

## UnitTest UTTest_auth_request_state {{{
ohos_unittest("UTTest_auth_request_state") {
  module_out_path = module_out_path

  sources = [ "UTTest_auth_request_state.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
  ]
}

## UTTest_auth_request_state }}}

## UnitTest ipc_client_manager_test {{{
ohos_unittest("ipc_client_manager_test") {
  module_out_path = module_out_path

  sources = [ "ipc_client_manager_test.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [ "device_auth:deviceauth_sdk" ]
}

## UnitTest ipc_client_manager_test }}}

## UnitTest UTTest_dm_auth_manager_first {{{
ohos_unittest("UTTest_dm_auth_manager_first") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/test/commonunittest" ]

  sources = [ "${devicemanager_path}/test/commonunittest/UTTest_dm_auth_manager_first.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
  ]
}

## UTTest_dm_auth_manager_first }}}

## UnitTest UTTest_dm_auth_manager_second {{{
ohos_unittest("UTTest_dm_auth_manager_second") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/test/commonunittest" ]

  sources = [ "${devicemanager_path}/test/commonunittest/UTTest_dm_auth_manager_second.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
  ]
}

## UTTest_dm_auth_manager_second }}}

###############################
## UnitTest UTTest_dm_radar_helper_test {{{
ohos_unittest("UTTest_dm_radar_helper_test") {
  module_out_path = module_out_path

  include_dirs = [
    "${devicemanager_path}/test/commonunittest",
    "${devicemanager_path}/radar/include",
  ]

  sources =
      [ "${devicemanager_path}/test/commonunittest/dm_radar_helper_test.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [ "device_auth:deviceauth_sdk" ]
}

## UTTest_dm_radar_helper_test }}}

## UnitTest UTTest_discovery_filter {{{
ohos_unittest("UTTest_discovery_filter") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/test/commonunittest" ]

  sources = [
    "${devicemanager_path}/test/commonunittest/UTTest_discovery_filter.cpp",
  ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
  ]
}

## UnitTest UTTest_discovery_filter }}}

## UnitTest UTTest_discovery_manager {{{
ohos_unittest("UTTest_discovery_manager") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/test/commonunittest" ]

  sources = [
    "${devicemanager_path}/test/commonunittest/UTTest_discovery_manager.cpp",
  ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
    "hitrace:hitrace_meter",
  ]
}

## UnitTest UTTest_discovery_manager }}}

###############################
## UnitTest UTTest_dm_deviceprofile_connector {{{
ohos_unittest("UTTest_dm_deviceprofile_connector") {
  module_out_path = module_out_path

  include_dirs = [
    "${devicemanager_path}/commondependency/include",
    "${devicemanager_path}/test/commonunittest",
    "${os_account_path }/interfaces/innerkits/ohosaccount/native/include",
    "${os_account_path }/interfaces/innerkits/osaccount/native/include",
  ]

  sources = [ "${devicemanager_path}/test/commonunittest/UTTest_dm_deviceprofile_connector.cpp" ]
  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
  ]
}

## UTTest_dm_deviceprofile_connector }}}

#############################

## UnitTest UTTest_dm_discovery_manager {{{
ohos_unittest("UTTest_dm_discovery_manager") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/test/commonunittest" ]

  sources = [
    "${devicemanager_path}/test/commonunittest/UTTest_dm_discovery_manager.cpp",
    "${devicemanager_path}/test/unittest/mock/ipc_server_listener.cpp",
    "${devicemanager_path}/test/unittest/mock/parameter.cpp",
    "${services_path}/src/device_manager_service.cpp",
    "${services_path}/src/device_manager_service_listener.cpp",
    "${services_path}/src/softbus/softbus_listener.cpp",
    "${servicesimpl_path}/src/dependency/softbus/softbus_connector.cpp",
    "${servicesimpl_path}/src/dependency/softbus/softbus_session.cpp",
    "${servicesimpl_path}/src/discovery/dm_discovery_filter.cpp",
    "${servicesimpl_path}/src/discovery/dm_discovery_manager.cpp",
  ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
    "hitrace:hitrace_meter",
  ]
}

## UnitTest UTTest_dm_discovery_manager }}}

## UnitTest UTTest_dm_distributed_hardware_load {{{
ohos_unittest("UTTest_dm_distributed_hardware_load") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/test/commonunittest" ]

  sources = [ "${devicemanager_path}/test/commonunittest/UTTest_dm_distributed_hardware_load.cpp" ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
    "hitrace:hitrace_meter",
  ]
}

## UnitTest UTTest_dm_distributed_hardware_load }}}

## UnitTest UTTest_dm_publish_manager {{{
ohos_unittest("UTTest_dm_publish_manager") {
  module_out_path = module_out_path

  include_dirs = [ "${devicemanager_path}/test/commonunittest" ]

  sources = [
    "${devicemanager_path}/test/commonunittest/UTTest_dm_publish_manager.cpp",
    "${devicemanager_path}/test/unittest/mock/ipc_server_listener.cpp",
    "${devicemanager_path}/test/unittest/mock/parameter.cpp",
    "${services_path}/src/device_manager_service.cpp",
    "${services_path}/src/device_manager_service_listener.cpp",
    "${services_path}/src/softbus/softbus_listener.cpp",
    "${servicesimpl_path}/src/dependency/softbus/softbus_connector.cpp",
    "${servicesimpl_path}/src/dependency/softbus/softbus_session.cpp",
    "${servicesimpl_path}/src/publish/dm_publish_manager.cpp",
  ]

  deps = [ ":device_manager_test_common" ]

  external_deps = [
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
    "hitrace:hitrace_meter",
  ]
}

## UnitTest UTTest_dm_publish_manager }}}

## Build device_manager_test_common.a {{{
config("device_manager_test_common_public_config") {
  include_dirs = [
    "${access_token_path}/nativetoken/include",
    "${access_token_path}/token_setproc/include",
    "${access_token_path}/accesstoken/include",
    "${common_path}/include",
    "${common_path}/include/ipc",
    "${common_path}/include/ipc/model",
    "${ext_path}/pin_auth/include",
    "${innerkits_path}/native_cpp/include",
    "${innerkits_path}/native_cpp/include/ipc/standard",
    "${innerkits_path}/native_cpp/include/ipc",
    "${innerkits_path}/native_cpp/include/notify",
    "${utils_path}/include",
    "${utils_path}/include/ipc/standard",
    "${utils_path}/include/crypto",
    "${utils_path}/include/fwkload/standard",
    "${utils_path}/include/timer",
    "${servicesimpl_path}/include",
    "${servicesimpl_path}/include/credential",
    "${servicesimpl_path}/include/discovery",
    "${servicesimpl_path}/include/dependency/softbus",
    "${servicesimpl_path}/include/authentication",
    "${servicesimpl_path}/include/adapter",
    "${servicesimpl_path}/include/publish",
    "${servicesimpl_path}/include/dependency/hichain",
    "${servicesimpl_path}/include/deviceinfo/",
    "${servicesimpl_path}/include/devicestate",
    "${services_path}/include",
    "${services_path}/include/softbus",
    "${services_path}/include/pinholder",
    "${devicemanager_path}/test/unittest/mock",
    "${servicesimpl_path}/include/ability",
    "${servicesimpl_path}/include/config",
    "${servicesimpl_path}/include/dependency/multipleuser",
    "${servicesimpl_path}/include/pinholder",
    "${devicemanager_path}/test/unittest/mock/",
    "//third_party/json/include",
  ]

  if (os_account_part_exists) {
    include_dirs += [
      "${os_account_path }/interfaces/innerkits/osaccount/native/include",
      "${os_account_path }/frameworks/common/database/include",
      "${os_account_path }/frameworks/common/account_error/include",
    ]
  }

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"device_manager_UTtest\"",
    "LOG_DOMAIN=0xD004110",
  ]
}

ohos_static_library("device_manager_test_common") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  testonly = true

  cflags_cc = []

  visibility = [ ":*" ]

  public_configs = [ ":device_manager_test_common_public_config" ]

  public_deps = [
    "${access_token_path}/accesstoken:libaccesstoken_sdk",
    "${access_token_path}/nativetoken:libnativetoken",
    "${access_token_path}/token_setproc:libtoken_setproc",
    "${devicemanager_path}/commondependency:devicemanagerdependency",
    "${devicemanager_path}/interfaces/kits/js:devicemanager",
    "${devicemanager_path}/radar:devicemanagerradar",
    "${ext_path}/pin_auth:devicemanagerext_pin_auth",
    "${innerkits_path}/native_cpp:devicemanagersdk",
    "${services_path}:devicemanagerservice",
    "${servicesimpl_path}:devicemanagerserviceimpl",
    "${utils_path}:devicemanagerutils",
    "//third_party/googletest:gmock",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
    "dsoftbus:softbus_client",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_core",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  if (os_account_part_exists) {
    cflags_cc += [ "-DOS_ACCOUNT_PART_EXISTS" ]
    external_deps += [ "os_account:os_account_innerkits" ]
  }

  subsystem_name = "distributedhardware"

  part_name = "device_manager"
}
## Build device_manager_test_common.a }}}
