# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (!defined(ohos_lite)) {
  import("//build/ohos.gni")
}

import("//foundation/distributedhardware/device_manager/device_manager.gni")

if (!defined(ohos_lite)) {
  config("devicemanagerutils_config") {
    include_dirs = [
      "include",
      "${common_path}/include",
    ]
  }
  config("cflags_config") {
    cflags = [
      "-Werror",
      "-fPIC",
      "-fstack-protector-strong",
      "-ffunction-sections",
      "-fdata-sections",
      "-fvisibility=hidden",
      "-Oz",
      "-flto",
    ]
    ldflags = [ "-flto" ]
  }
  ohos_shared_library("dmdb_kvstore") {
    branch_protector_ret = "pac_ret"

    sanitize = {
      boundary_sanitize = true
      cfi = true
      cfi_cross_dso = true
      debug = false
      integer_overflow = true
      ubsan = true
    }

    cflags = [
      "-fPIC",
      "-fstack-protector-strong",
      "-Werror",
    ]

    ldflags = [
      "-Wl,-z,relro",
      "-Wl,-z,now",
    ]

    configs = [ ":cflags_config" ]

    sources = [
      "src/kv_adapter.cpp",
    ]

    public_configs = [ ":devicemanagerutils_config" ]

    defines = [
      "HI_LOG_ENABLE",
      "DH_LOG_TAG=\"dmdb_kvstore\"",
      "LOG_DOMAIN=0xD004110",
    ]

    deps = [
      "${json_path}:devicemanagerjson",
      "${utils_path}:devicemanagerutils",
    ]

    external_deps = [
      "hilog:libhilog",
    ]

    public_external_deps = [
      "kv_store:distributeddata_inner",
    ]

    subsystem_name = "distributedhardware"

    part_name = "device_manager"
  }
}
